--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
+    "echarts": "^4.6.0",
     "element-tree-grid": "^0.1.3",
     "element-ui": "^2.13.0",
     "vue": "^2.6.11",
