--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "echarts": "^4.6.0",
     "element-tree-grid": "^0.1.3",
     "element-ui": "^2.13.0",
+    "nprogress": "^0.2.0",
     "vue": "^2.6.11",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.1.5"
@@ -25,7 +26,8 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.1.2",
     "moment": "^2.24.0",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "webpack-bundle-analyzer": "^3.6.1"
   },
   "eslintConfig": {
     "root": true,
